# open-healthcare-terminology-server

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE.md  Makefile  NOTICE.md  Pipfile  README.md  app.py  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260624_0001_registry_tables.py  20260625_0002_terminology_versions.py  20260625_0003_release_packages.py  20260629_0004_lexical_trigram_indexes.py
docs/: ARCHITECTURE.md  SNOMED_RF2_REFERENCE.md
docs/terminologies/: ICD10CM.md  ICD11.md  LOINC.md  SNOMED.md
ots/: __init__.py  config.py  terminologies.py  worker.py
ots/api/: __init__.py  auth.py  embeddings.py  openapi.py  parsers.py  responses.py  routes.py  schemas.py
ots/api/views/: __init__.py  concepts.py  fhir.py  jobs.py  search.py  system.py
ots/cli/: __main__.py  app.py  runner.py
ots/cli/common/: commands.py  dump_database.py  ensure_lexical_indexes.py  imported_loader_utils.py  load_database_dump.py  resync_terminology_edition.py  update_concept_embeddings.py
ots/db/: __init__.py  models.py  repositories.py  schema.py  session.py  terminology_postgres.py
ots/embedding_providers/: __init__.py  base.py  fastembed.py  ollama.py  openai.py  registry.py  utils.py
ots/tasks/: embeddings.py
ots/terminology/: __init__.py  base.py  registry.py
ots/terminology/icd/: __init__.py  model.py
ots/terminology/icd/scripts/: commands.py  download_releases.py  load_icd10cm_postgres.py  load_icd11_postgres.py
ots/terminology/loinc/: __init__.py  model.py
ots/terminology/loinc/scripts/: cleanup_codes.py  cleanup_status.py  commands.py  load_loinc_postgres.py  rebuild_search_text.py
ots/terminology/snomed/: __init__.py  model.py
ots/terminology/snomed/scripts/: commands.py  load_snomed_postgres.py  load_snomed_rf2_packages.py  rebuild_snomed_search_text.py  rf2_packages.py
